--- a/templates/authentication/signin.html
+++ b/templates/authentication/signin.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sign In</title>
+    <link rel="icon" type="image/gif" href="https://logowik.com/content/uploads/images/pwc-price-waterhouse-coopers7478.jpg">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -13,32 +14,44 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #000;
-            color: #fff;
+            background-color: #fff;
+            color: #000;
         }
 
         h2 {
             font-size: 30px;
             font-style: italic;
-            margin-top: 20px;
+            margin-top: 40px;
             color: #ffeb3b;
             text-align: center;
         }
 
         .container {
-            max-width: 400px;
+            max-width: 415px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #000;
+            background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .logo {
+            position: center;
+            top: 0;
+            left: 0;
+            margin: auto;
+            width: 165px; /* Adjust the width of the logo */
+            height: 165px; /* Adjust the height of the logo */
+            background-image: url("https://logowik.com/content/uploads/images/pwc-price-waterhouse-coopers7478.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
         }
 
         .container label {
             display: block;
             margin-bottom: 10px;
             font-weight: bold;
-            color: #fff;
+            color: #000;
         }
 
         .container input[type="text"],
@@ -47,17 +60,18 @@
             margin: -8px;
             padding: 10px;
             margin-bottom: 20px;
-            border-radius: 5px;
-            border: none;
+            border-radius: 12px;
+            border-color: orange;
             background-color: #fff;
             color: #000;
         }
 
         .container input[type="submit"] {
-            width: 100%;
+            width: 105%;
+            margin: -5px;
             padding: 10px;
             margin-bottom: 20px;
-            border-radius: 5px;
+            border-radius: 12px;
             background-color: #ffeb3b;
             color: #000;
             border: none;
@@ -69,10 +83,33 @@
             background-color: #ffeb3b;
             background-image: linear-gradient(to right, #ffeb3b, #ff6347);
         }
+
+        a:link {
+            color: green;
+            background-color: transparent;
+            text-decoration: none;
+          }
+          a:visited {
+            color: black;
+            background-color: transparent;
+            text-decoration: none;
+          }
+          a:hover {
+            color: #ff6347;
+            background-color: transparent;
+            text-decoration: underline;
+          }
+          a:active {
+            color: #ffeb3b;
+            background-color: transparent;
+            text-decoration: underline;
+          }
     </style>
 </head>
 <body>
     <div class="container">
+        <div class="logo"></div>
+
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
             <strong>Message:</strong> {{ message }}
@@ -82,7 +119,7 @@
         </div>
         {% endfor %}
 
-        <h2>Sign In</h2>
+        <h2></h2>
 
         <form action="/signin" method="post">
             {% csrf_token %}
@@ -92,6 +129,7 @@
             <label for="pass1">Password</label>
             <input type="password" id="pass1" name="pass1" placeholder="Enter Your Password" required>
             <br>
+            <p><a href="/signup">Create an account.</a></p>
             <input type="submit" value="Sign In">
         </form>
     </div>
