--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Authentication</title>
+    <link rel="icon" type="image/gif" href="https://logowik.com/content/uploads/images/pwc-price-waterhouse-coopers7478.jpg">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -12,25 +13,38 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #000;
-            color: #fff;
+            background-color: #fff;
+            color: #000;
         }
 
-        h2 {
+        h3 {
             font-size: 30px;
             font-style: italic;
-            margin-top: 20px;
-            color: #ffeb3b;
+            margin-top: 40px;
+            color: #000;
             text-align: center;
         }
 
         .container {
-            max-width: 400px;
+            max-width: 415px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #000;
+            background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .logo {
+            position: absolute;
+            top: 0;
+            left: 0;
+            margin: auto;
+            width: 150px; /* Adjust the width of the logo */
+            height: 150px; /* Adjust the height of the logo */
+            background-image: url("https://logowik.com/content/uploads/images/pwc-price-waterhouse-coopers7478.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
         }
 
         .container label {
@@ -46,8 +60,8 @@
             margin: -8px;
             padding: 10px;
             margin-bottom: 20px;
-            border-radius: 5px;
-            border: none;
+            border-radius: 12px;
+            border-color: orange;
             background-color: #fff;
             color: #000;
         }
@@ -85,7 +99,7 @@
         }
 
         .button a {
-            color: #fff;
+            color: #000;
             text-decoration: none;
         }
 
@@ -120,6 +134,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="logo"></div>
         <h3 class="welcome-text">Welcome to our website</h3>
 
         {% if user.is_authenticated %}
